--- a/css/style.css
+++ b/css/style.css
@@ -1045,7 +1045,7 @@ footer p {
     }
 
     .miperfil { 
-        height: calc(100vh - 90.98px);
+        height: 950px;
     }
 
     .miperfil div h2 {
