--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    color: #F3DFA2;
+    color: $color-secundario;
     font-family: 'Alegreya', serif;
     font-size: 18px;
     height: calc(100vh - 103.5px);
