--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,9 +8,9 @@ body {
 
 header nav {
   background: #231f20;
-  background: linear-gradient(90deg, #231f20 0%, #f3dfa2 95%);
-  background: -webkit-linear-gradient(90deg, #231f20 0%, #f3dfa2 95%);
-  background: -moz-linear-gradient(90deg, #231f20 0%, #f3dfa2 95%);
+  background: linear-gradient(90deg, #231f20 0%, #F3DFA2 95%);
+  background: -webkit-linear-gradient(90deg, #231f20 0%, #F3DFA2 95%);
+  background: -moz-linear-gradient(90deg, #231f20 0%, #F3DFA2 95%);
   padding: 25px 10px 25px 10px;
   position: sticky;
   top: 0;
@@ -108,7 +108,7 @@ main .prod-flex {
   main .prod-flex .card {
     margin: 10px; }
     main .prod-flex .card .card-img-top {
-      background-color: #f3dfa2; }
+      background-color: #F3DFA2; }
     main .prod-flex .card .card-body {
       background-color: #7EBDC2; }
       main .prod-flex .card .card-body .titulo-prod {
@@ -123,7 +123,7 @@ main .prod-flex {
         font-weight: bold;
         margin-bottom: 15px; }
       main .prod-flex .card .card-body .boton-prod:hover {
-        color: #f3dfa2; }
+        color: #F3DFA2; }
 
 main .progreso {
   background-image: url(../img/fondoprod.jpg);
@@ -184,7 +184,7 @@ main .productos-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 450px 450px 450px;
-  background-color: #231F20;
+  background-color: #231f20;
   text-align: center; }
   main .productos-grid .producto-main {
     margin: 15px;
@@ -214,7 +214,7 @@ main .productos-grid {
       margin-bottom: 15px; }
     main .productos-grid .producto-main a {
       text-decoration: none;
-      color: #231F20;
+      color: #231f20;
       font-family: 'Alegreya', serif;
       font-size: 24px;
       font-weight: bold;
@@ -225,11 +225,11 @@ main .productos-grid {
         box-shadow: 15px -3px 17px 0px rgba(126, 189, 194, 0.75);
         -webkit-box-shadow: 15px -3px 17px 0px rgba(126, 189, 194, 0.75);
         -moz-box-shadow: 15px -3px 17px 0px rgba(126, 189, 194, 0.75);
-        background-color: #231F20;
+        background-color: #231f20;
         color: #EAEAEA; }
 
 .informacion {
-  background-color: #231F20;
+  background-color: #231f20;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -348,7 +348,7 @@ main .nosotros {
   justify-content: center; }
 
 footer {
-  background-color: #231F20;
+  background-color: #231f20;
   text-align: center; }
   footer p {
     font-family: 'Alegreya', serif;
