--- a/scss/components/_perfil.scss
+++ b/scss/components/_perfil.scss
@@ -14,30 +14,30 @@ main{
         div{
             h2{
                 display: inline-flex;
-                border: 2px #7EBDC2 solid;
+                border: 2px $color-terciario solid;
                 padding: 10px;
-                color: #F3DFA2;
+                color: $color-secundario;
                 font-size: 35px;
                 font-weight: bolder;
             }
             h3{
                 font-size: 32px;
-                color: #F3DFA2;
+                color: $color-secundario;
             }
             .perfildesc{
                 font-size: 28px;
-                color: #EAEAEA;
+                color: $color-cuaternario;
             }
             h4{
                 font-size: 32px;
-                color: #F3DFA2;
+                color: $color-secundario;
             }
             .niveles{
                 text-align: left;
                 font-size: 28px;
-                color: #EAEAEA;
+                color: $color-cuaternario;
                 span{
-                    color: #F3DFA2;
+                    color: $color-secundario;
                     text-decoration: underline;
                 }
             }
