--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -7,7 +7,7 @@
     color: $color-secundario;
     font-family: 'Alegreya', serif;
     font-size: 18px;
-    height: calc(100vh - 103.5px);
+    height: $height;
     padding: 20px;
     display: flex;
     justify-content: center;
